--- a/src/style.css
+++ b/src/style.css
@@ -94,8 +94,8 @@
 
 .bg-text {
     position: relative;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 0;
     transform: translate(-50%, -50%);
     z-index: 1;
     transition: transform 0.1s ease;
@@ -132,4 +132,11 @@
   color: var(--lightest);
   border-radius: 15px;
   padding: 0 10px 0 10px;
+}
+
+#nametag-self {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
